--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -63,9 +63,10 @@
 
     <TextView
         android:id="@+id/textViewHeight"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/height"
+        android:textAlignment="center"
         android:textSize="25sp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/seekBar1"
@@ -96,9 +97,10 @@
 
     <TextView
         android:id="@+id/textViewWeight"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/weight"
+        android:textAlignment="center"
         android:textSize="25sp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/seekBar2"
